--- a/app/to_do_list/templates/add_page.html
+++ b/app/to_do_list/templates/add_page.html
@@ -7,27 +7,7 @@
 <h1>Add To Do</h1>
 <div class="form">
     <form action="{% url 'to_do_add' %}" method="post">
-        {% csrf_token %}
-        <div class="form_row">
-            <input placeholder="Заголовок" maxlength="200" type="text" name="title">
-        </div>
-        <div class="form_row description">
-            <textarea placeholder="Описание" maxlength="1000" rows="5" cols="24" name="description"></textarea>
-        </div>
-        <div class="form_row">
-            <span>Статус - </span>
-            <select name="status" placeholder="Статус">
-                <option value="new">Новый</option>
-                <option value="in progress">В процессе</option>
-                <option value="made">Сделано</option>
-            </select>
-        </div>
-        <div class="form_row">
-            <input type="date" name="date">
-        </div>
-        <div class="form_row">
-            <input type="submit" value="Подтвердить">
-        </div>
+        {% include 'partial/to_do_form.html' with button_text="Создать" %}
     </form>
 </div>
 {% endblock %}
