добавил валидацию в add_view

--- a/app/to_do_list/templates/partial/to_do_form.html
+++ b/app/to_do_list/templates/partial/to_do_form.html
@@ -1,5 +1,8 @@
 {% csrf_token %}
         <div class="form_row">
+            <div class="error_block">
+                <span class="error_print">{{ errors.title_error }}</span>
+            </div>
             <input placeholder="Заголовок" maxlength="200" type="text" value="{{ to_do.title }}" name="title">
         </div>
         <div class="form_row description">
