--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -59,7 +59,7 @@ h1{
     margin-top: 50px;
 }
 .form_row{
-    margin-top: 20px;
+    margin: 10px 0;
 }
 .form_row input{
     width: 200px;
@@ -87,5 +87,5 @@ h1{
 }
 .error_block{
     color: White;
-    padding-bottom: 10px;
+    margin: 5px 0;
 }
