--- a/app/to_do_list/templates/partial/to_do_form.html
+++ b/app/to_do_list/templates/partial/to_do_form.html
@@ -1,28 +1,31 @@
 {% csrf_token %}
-        <div class="form_row">
-            <div class="error_block">
-                <span class="error_print">{{ errors.title_error }}</span>
-            </div>
-            <input placeholder="Заголовок" maxlength="200" type="text" value="{{ to_do.title }}" name="title">
-        </div>
-        <div class="form_row description">
-            <textarea placeholder="Описание" maxlength="1000" rows="5" cols="24" name="description">{{ to_do.description }}</textarea>
-        </div>
-        <div class="form_row">
-            <span>Статус - </span>
-            <select name="status">
-                {% for stat in to_do_status %}
-                    {% if stat.0 == to_do.status %}
-                        <option value="{{ stat.0 }}" selected>{{ stat.1 }}</option>
-                    {% else %}
-                        <option value="{{ stat.0 }}">{{ stat.1 }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form_row">
-            <input type="date"  value="{{ to_do.date }}" name="date">
-        </div>
-        <div class="form_row">
-            <input type="submit" value="{{ button_text }}">
-        </div>
+<div class="error_block">
+    <span class="error_print">{{ errors.title_error }}</span>
+</div>
+<div class="form_row">
+    <input placeholder="Заголовок" type="text" value="{{ to_do.title }}" name="title">
+</div>
+<div class="error_block">
+    <span class="error_print">{{ errors.description_error }}</span>
+</div>
+<div class="form_row description">
+    <textarea placeholder="Описание" rows="5" cols="24" name="description">{{ to_do.description }}</textarea>
+</div>
+<div class="form_row">
+    <span>Статус - </span>
+    <select name="status">
+        {% for stat in to_do_status %}
+        {% if stat.0 == to_do.status %}
+        <option value="{{ stat.0 }}" selected>{{ stat.1 }}</option>
+        {% else %}
+        <option value="{{ stat.0 }}">{{ stat.1 }}</option>
+        {% endif %}
+        {% endfor %}
+    </select>
+</div>
+<div class="form_row">
+    <input type="date" value="{{ to_do.date }}" name="date">
+</div>
+<div class="form_row">
+    <input type="submit" value="{{ button_text }}">
+</div>
