--- a/app/to_do_list/templates/add_page.html
+++ b/app/to_do_list/templates/add_page.html
@@ -7,7 +7,7 @@
 <h1>Add To Do</h1>
 <div class="form">
     <form action="{% url 'to_do_add' %}" method="post">
-        {% include 'partial/to_do_form.html' with button_text="Создать" %}
+        {% include 'partial/to_do_form_2.html' with button_text="Создать" %}
     </form>
 </div>
 {% endblock %}
