--- a/app/to_do_list/templates/to_do_update.html
+++ b/app/to_do_list/templates/to_do_update.html
@@ -7,7 +7,7 @@
 <h1>Update To Do</h1>
 <div class="form">
     <form action="{% url 'to_do_update' to_do.pk %}" method="post">
-        {% include 'partial/to_do_form.html' with button_text="Обновить" %}
+        {% include 'partial/to_do_form_2.html' with button_text="Обновить" %}
     </form>
 </div>
 {% endblock %}
